# boggle-solver

./: README.md  docker-compose.yml  pom.xml  shell.nix
java/: Dockerfile  README.md
java/src/main/java/me/mlynch/config/: VocabularyConfig.java
java/src/main/java/me/mlynch/controller/: SolveController.java
java/src/main/java/me/mlynch/domain/: Board.java  Cell.java  Solution.java  TraversalPath.java  Vocabulary.java
java/src/main/java/me/mlynch/dto/: BoardDto.java  SolutionDto.java
java/src/main/java/me/mlynch/service/: SolutionService.java
rust/: Cargo.toml
rust/src/: main.rs  route.rs  solver.rs
src/main/java/me/mlynch/domain/: Position.java  Word.java
src/test/java/me/mlynch/domain/: BoardSpec.groovy
